namespace TourneyPlanner.API.Services
{
    public interface ISaltService
    {
        public string GenerateSalt();
    }
}
